--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: center;  
 }
 
 .App-logo {
@@ -11,6 +11,33 @@
   margin-top: 60px;
 }
 
+.product-info p, img{
+  text-align: left;
+  margin: 1px;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+
+.product-name{
+  color: #333333;
+}
+
+
+/* Stock Check Colours */
+.zeroStock{
+  color: #3a2a2f;
+}
+.onlyOneStock{
+  color:crimson;
+}
+.moreStocks{
+  color:forestgreen;
+}
+
+.stock::before {
+  content: "•";
+}
 
 /* Jumbotron */
 .main-bg{
