--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,16 @@
   padding-right: 25px;
 }
 
-
+.cart-count{
+  padding-right: 10px;
+  padding-left: 15px;
+}
 .product-name{
   color: #333333;
+}
+
+.btn-disable{
+  pointer-events : none;
 }
 
 
