--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,124 @@
 }
 
 
+.checkbox-container{
+  max-width: 900px;
+  margin: 20px auto;
+  overflow: hidden;
+  background-color: #f8f9fa;
+}
+
+.box-1 {
+  max-width: 450px;
+  padding: 10px 40px;
+  user-select: none;
+}
+
+.box-inner-1 thead{
+ font-size: 12px;
+}
+
+.box-inner-1 td{
+  font-size: 12px;
+  font-weight: 500;
+}
+
+.box-1 div .fs-12 {
+  font-size: 8px;
+  color: white;
+}
+
+.box-1 div .fs-14 {
+  font-size: 15px;
+  color: white;
+}
+
+
+.box-2 {
+  max-width: 450px;
+  padding: 10px 40px;
+}
+
+.box-2 .card-atm .form-control {
+  border: none;
+  box-shadow: none;
+}
+
+.box-2 .box-inner-2 input.form-control {
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.dis {
+  font-size: 12px;
+  font-weight: 500;
+}
+
+
+.form-select {
+  border-radius: 0;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+
+}
+
+.box-2 .box-inner-2 .btn.btn-outline-primary {
+  width: 120px;
+  padding: 10px;
+  font-size: 11px;
+  padding: 0% !important;
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 0;
+  background-color: whitesmoke;
+  color: black;
+  font-weight: 600;
+}
+
+.box-2 .box-inner-2 .btn.btn-primary {
+  background-color: #7700ff;
+  color: whitesmoke;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  justify-content: center;
+  border: none;
+  padding: 10px;
+}
+
+
+.box-2 .box-inner-2 .btn.btn-primary:hover {
+  background-color: #7a34ca;
+}
+
+
+@media (max-width:426px) {
+
+  .box-1,
+  .box-2 {
+      max-width: 400px;
+      padding: 20px 10px;
+  }
+
+}
+
+@media (max-width:768px) {
+  .container {
+      max-width: 700px;
+      margin: 10px auto;
+  }
+
+  .box-1,
+  .box-2 {
+      max-width: 600px;
+      padding: 20px 90px;
+      margin: 20px auto;
+  }
+
+}
+
 /* something */
 /* 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
@@ -137,28 +255,9 @@ p {
     margin: 0%;
 }
 
-.container {
-    max-width: 900px;
-    margin: 20px auto;
-    overflow: hidden;
-    background-color: #f8f9fa;
-}
 
-.box-1 {
-    max-width: 450px;
-    padding: 10px 40px;
-    user-select: none;
-}
 
-.box-1 div .fs-12 {
-    font-size: 8px;
-    color: white;
-}
 
-.box-1 div .fs-14 {
-    font-size: 15px;
-    color: white;
-}
 
 .box-1 img.pic {
     width: 20px;
@@ -172,15 +271,7 @@ p {
     object-fit: cover;
 }
 
-.box-1 .name {
-    font-size: 11px;
-    font-weight: 600;
-}
 
-.dis {
-    font-size: 12px;
-    font-weight: 500;
-}
 
 label.box {
     width: 100%;
@@ -224,68 +315,16 @@ input[type="radio"] {
     display: none;
 }
 
-.box-2 {
-    max-width: 450px;
-    padding: 10px 40px;
-}
 
 
-.box-2 .box-inner-2 input.form-control {
-    font-size: 12px;
-    font-weight: 600;
-}
 
-.box-2 .box-inner-2 .inputWithIcon {
-    position: relative;
-}
 
-.box-2 .box-inner-2 .inputWithIcon span {
-    position: absolute;
-    left: 15px;
-    top: 8px;
-}
-
-.box-2 .box-inner-2 .inputWithcheck {
-    position: relative;
-}
-
-.box-2 .box-inner-2 .inputWithcheck span {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: green;
-    font-size: 12px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    right: 15px;
-    top: 6px;
-}
-
-.form-control:focus,
-.form-select:focus {
-    box-shadow: none;
-    outline: none;
-    border: 1px solid #7700ff;
-}
 
 .border:focus-within {
     border: 1px solid #7700ff !important;
 }
 
-.box-2 .card-atm .form-control {
-    border: none;
-    box-shadow: none;
-}
 
-.form-select {
-    border-radius: 0;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-
-}
 
 .address .form-control.zip {
     border-radius: 0;
@@ -299,35 +338,8 @@ input[type="radio"] {
 
 }
 
-.box-2 .box-inner-2 .btn.btn-outline-primary {
-    width: 120px;
-    padding: 10px;
-    font-size: 11px;
-    padding: 0% !important;
-    display: flex;
-    align-items: center;
-    border: none;
-    border-radius: 0;
-    background-color: whitesmoke;
-    color: black;
-    font-weight: 600;
-}
 
-.box-2 .box-inner-2 .btn.btn-primary {
-    background-color: #7700ff;
-    color: whitesmoke;
-    font-size: 14px;
-    display: flex;
-    align-items: center;
-    font-weight: 600;
-    justify-content: center;
-    border: none;
-    padding: 10px;
-}
 
-.box-2 .box-inner-2 .btn.btn-primary:hover {
-    background-color: #7a34ca;
-}
 
 .box-2 .box-inner-2 .btn.btn-primary .fas {
     font-size: 13px !important;
@@ -396,30 +408,7 @@ input[type="radio"] {
     font-size: 12px;
 }
 
-@media (max-width:768px) {
-    .container {
-        max-width: 700px;
-        margin: 10px auto;
-    }
 
-    .box-1,
-    .box-2 {
-        max-width: 600px;
-        padding: 20px 90px;
-        margin: 20px auto;
-    }
 
-}
 
-@media (max-width:426px) {
-
-    .box-1,
-    .box-2 {
-        max-width: 400px;
-        padding: 20px 10px;
-    }
-
-    ::placeholder {
-        font-size: 9px;
-    }
 } */
