--- a/src/App.css
+++ b/src/App.css
@@ -16,25 +16,43 @@
   
 }
 
-.product-info{    
+/* .product-info{    
   border: 1px solid #444444;
   border-collapse: collapse;
-}
+} */
+
+
 
 .product-info p, img{
+  font-size: 14px;
   text-align: left;
   margin: 1px;
   padding-left: 25px;
-  padding-right: 25px;
+  padding-right: 25px; 
+  margin-top: 3px;
+}
+
+.product-image{
+  width: 250px;
+  height: 200px;
+  border-radius: 15%;
+
+}
+
+.product-price{
+  color:maroon;
+  font-size: 15px;
 }
 
 .cart-count{
   padding-right: 10px;
   padding-left: 15px;
 }
+
 .product-name{
   color: #333333;
 }
+
 .cart-empty {
   margin: 30px;
   padding: 20px;
@@ -234,6 +252,8 @@
 }
 
 
+
+
 @media (max-width:426px) {
 
   .box-1,
@@ -256,165 +276,46 @@
       padding: 20px 90px;
       margin: 20px auto;
   }
-
-}
-
-/* something */
-/* 
-
-
-.checkout-body {
-    padding: 50px;
-}
-
-p {
-    margin: 0%;
 }
 
 
+@media (max-width:576px) {
 
+  .product-info p, img{
+    text-align: center;
+    margin-top: 2px;
+    padding-left: 5px;
+    padding-right: 5px; 
+  }
 
-
-.box-1 img.pic {
-    width: 20px;
-    height: 20px;
-    object-fit: cover;
-}
-
-.box-1 img.mobile-pic {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+  .product-image{
+    width: 150px;
+    height: 100px;
+  
+  }  
+  
 }
 
 
 
-label.box {
-    width: 100%;
-    font-size: 12px;
-    background: #ddd;
-    margin-top: 12px;
-    padding: 10px 12px;
-    border-radius: 5px;
-    cursor: pointer;
-    border: 1px solid transparent;
-}
+@media (max-width:1400px) {
 
-#one:checked~label.first,
-#two:checked~label.second,
-#three:checked~label.third {
-    border-color: #7700ff;
-}
+  .product-info p, img{
+    text-align: left;
+    margin-top: 4px;
+    padding-left: 5px;
+    padding-right: 5px; 
+  }
 
-#one:checked~label.first .circle,
-#two:checked~label.second .circle,
-#three:checked~label.third .circle {
-    border-color: #7a34ca;
-    background-color: #fff;
-}
-
-label.box .course {
-    width: 100%;
-}
-
-label.box .circle {
-    height: 12px;
-    width: 12px;
-    background: #ccc;
-    border-radius: 50%;
-    margin-right: 15px;
-    border: 4px solid transparent;
-    display: inline-block;
-}
-
-input[type="radio"] {
-    display: none;
+  .product-image{
+    margin-top: 4px;
+    width: 150px;
+    height: 100px;
+  
+  }  
+  
 }
 
 
 
 
-
-
-.border:focus-within {
-    border: 1px solid #7700ff !important;
-}
-
-
-
-
-
-
-
-
-.box-2 .box-inner-2 .btn.btn-primary .fas {
-    font-size: 13px !important;
-    color: whitesmoke;
-}
-
-.carousel-indicators [data-bs-target] {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-}
-
-.carousel-inner {
-    width: 100%;
-    height: 250px;
-}
-
-.carousel-item img {
-    object-fit: cover;
-    height: 100%;
-}
-
-.carousel-control-prev {
-    transform: translateX(-50%);
-    opacity: 1;
-}
-
-.carousel-control-prev:hover .fas.fa-arrow-left {
-    transform: translateX(-5px);
-}
-
-.carousel-control-next {
-    transform: translateX(50%);
-    opacity: 1;
-}
-
-.carousel-control-next:hover .fas.fa-arrow-right {
-    transform: translateX(5px);
-}
-
-.fas.fa-arrow-left,
-.fas.fa-arrow-right {
-    font-size: 0.8rem;
-    transition: all .2s ease;
-}
-
-.icon {
-    width: 30px;
-    height: 30px;
-    background-color: #f8f9fa;
-    color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    transform-origin: center;
-    opacity: 1;
-}
-
-.fas,
-.fab {
-    color: #6d6c6d;
-}
-
-::placeholder {
-    font-size: 12px;
-}
-
-
-
-
-} */
