--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,9 @@
 
 /* Jumbotron */
 .main-bg{
+  margin-left: auto;
+  margin-right: auto;
+  width: 99%;
   height:500px;
   background-image: url("./img/jb-twilight-struggle2.jpg");
   background-repeat: no-repeat;
