--- a/src/slick-theme.css
+++ b/src/slick-theme.css
@@ -55,7 +55,7 @@
     line-height: 1;
 
     opacity: .75;
-    color: black;
+    color: chocolate;
     background-color: transparent;
     z-index: 10;
 
