--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
+body{
+  background-color: #f8f8ed;
+  /* background-color: #e6d4b3; */
+}
 
+.h4{
+  font-weight: 700;
+}
 
 .App {
   text-align: center;  
 }
+
 
 .navbar-brand{
   color: black;
@@ -14,12 +22,9 @@
 
 .navbar-custom{
   background-color: #f8f8ed;
-  opacity: 0.55;
+  opacity: 0.95;
 }
-body{
-  background-color: #f8f8ed;
-  /* background-color: #e6d4b3; */
-}
+
 
 .App-logo {
   height: 40vmin;
@@ -46,7 +51,7 @@ body{
 }
 
 .left-text{  
-  padding: 30px;
+  padding: 15px;
   max-width: 300px;
   text-align: left;
   grid-column: 1;  
@@ -61,7 +66,7 @@ body{
   margin-bottom: 10px;
   font-size:24px;
   font-weight: 700;
-  color:white;
+  color: #ffffff;
 }
 .left-text Button{
   margin-top: 8px;
@@ -85,6 +90,27 @@ body{
   */
 }
 
+.card-category-btn{
+  width: 170px;
+  height: 40px;
+  margin-top:8px;
+  color: #ffffff;
+  background-color: #e95d2b; 
+  text-align: center;
+  border-color: #0000000f;
+  font-size: 15px;
+  font-weight: 500;
+  border-radius: 0.375rem;
+}
+
+.card-category-btn:hover{
+  color: #ffffff;
+  background-color: #E89558;
+  box-shadow: 0 2px 2px 2px #0000000f;
+  outline: 0;
+  border-color: #0000000f;
+}
+
 .card-box{
   background-color: #f0f0f0;
   border-radius: 30px;
@@ -93,7 +119,7 @@ body{
   font-size:15px;
   font-weight: 500;
   margin-bottom: 10px;
-  margin-top: 50px;
+  margin-top: 20px;
 
 }
 
@@ -111,31 +137,31 @@ body{
 /**/
 
 .right-card{
-  background-color: white;
+  background-color: #F8F8ED;
 }
 .strategy-card{
-  background-color: white;
+  background-color: #F8F8ED;
 }
 .family-card{
-  background-color: white;
+  background-color: #F8F8ED;
 }
 
 .family-container{
   grid-row:1;
-  background-color: white;
+  background-color: #F8F8ED;
   border-radius: 15px;
 }
 .strategy-container{
   grid-row:1;  
-  background-color: white;
+  background-color: #F8F8ED;
   border-radius: 15px;
 }
 /**/
 .strategy-top-container{
-  background-color: #3c88c7;
+  background-color: #B5B0B7;
 }
 .family-top-container{
-  background-color: #c28a5b;
+  background-color: #F4BDAE;
 }
 
 .card-container{
@@ -253,9 +279,6 @@ ul.imgs li{
 }
 
 
-
-
-
 .product-info p, img{
   font-size: 14px;
   text-align: left;
@@ -272,9 +295,10 @@ ul.imgs li{
 }
 
 .card-product-image{
-  width:180px;
-  height: 130px;
+  width: 230px;
+  height: 220px;
   border-radius: 20%;
+  padding:5px;
 }
 
 .product-price{
