--- a/src/App.css
+++ b/src/App.css
@@ -381,9 +381,11 @@ ul.imgs li{
   opacity: 1;
   transition: opacity 0.5s;
 }
-.nav-link:active{
-  background-color: #F4BDAE;
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  background-color: 	#f4f4eb;
+  color: #E89558;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
