--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ body{
   text-align: left;
   margin: auto;
   max-width: 1400px;
+  margin-top:50px;
 }
 
 .left-text{  
@@ -361,7 +362,7 @@ ul.imgs li{
 }
 
 /* Jumbotron */
-.main-bg{
+/* .main-bg{
   margin-left: auto;
   margin-right: auto;
   width: 100%;
@@ -371,6 +372,20 @@ ul.imgs li{
   background-position: center;
   background-size: cover;
   margin-bottom: 50px;  
+} */
+
+.jumbo-carousel-box{
+  width: 100%;
+  height:500px;
+  overflow:hidden;
+}
+
+.Jumbo-Slide-img{
+  margin-top: 60px;
+  padding:0px;
+  width:100%;
+  height:100%;
+  object-fit:cover;
 }
 
 
