--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,41 @@ body{
   background-color: #f8f8ed;
   /* background-color: #e6d4b3; */
 }
-
 .h4{
   font-weight: 700;
 }
-
 .App {
   text-align: center;  
 }
+/* footer */
 
+.footer{
+  text-align: left;
+  padding: 102px 0px 100px;
+  background-color: #222222;
+  width:100%;
+  height: 300px;
+  margin: 0px;
+  margin-top: 150px;
+  color: #fff;
+}
+.footer-container{
+  position: relative;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #393939;
+  font-size: 0;
+}
+.footer-container h3, ul, li{
+  font-family: 'Jost', 'sans-serif';
+  font-size: 15px;
+  margin-left:15px;
+  display: inline-block;
+  list-style: none;
+  color:white;
+  font-size: 15px;
+  line-height: 1.6;
+  vertical-align: baseline;
+}
 
 .navbar-brand{
   color: black;  
@@ -130,10 +156,6 @@ body{
   /*background-color: black;*/
   padding: 5px;
 }
-
-
-/**/
-
 .right-card{
   background-color: #F8F8ED;
 }
@@ -156,10 +178,12 @@ body{
 }
 /**/
 .strategy-top-container{
-  background-color: #B5B0B7;
+  background: linear-gradient(45deg, #B5B0B7 35%, Violet, Orange);
+  /* background-color: #B5B0B7; */
 }
 .family-top-container{
-  background-color: #F4BDAE;
+  background: linear-gradient(45deg, #F4BDAE 35%, Violet, Orange);
+  /* background-color: #F4BDAE; */
 }
 
 .card-container{
@@ -179,93 +203,9 @@ body{
 }
 
 
-/* 
-.list-Container{
-  grid-template-columns: repeat(auto-fill, minmax(25%, auto));;
-  
-} */
-
-/* .product-info{    
-  border: 1px solid #444444;
-  border-collapse: collapse;
-} */
 
 
 
-/*slide jumbo*/
-.slider{
-  width: 640px;
-  height: 480px;
-  position: relative;
-  margin: 0 auto;
-  overflow: hidden; /* 현재 슬라이드 오른쪽에 위치한 나머지 슬라이드 들이 보이지 않도록 가림 */
-}
-.slider input[type=radio]{
-  display: none;
-}
-ul.imgs{
-  padding: 0;
-  margin: 0;
-  list-style: none;    
-}
-ul.imgs li{
-  position: absolute;
-  left: 640px;
-  transition-delay: 1s; /* 새 슬라이드가 이동해 오는 동안 이전 슬라이드 이미지가 배경이 보이도록 지연 */
-
-  padding: 0;
-  margin: 0;
-}
-.bullets{
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 20px;
-  z-index: 2;
-}
-.bullets label{
-  display: inline-block;
-  border-radius: 50%;
-  background-color: rgba(0,0,0,0.55);
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-}
-/* 현재 선택된 불릿 배경 흰색으로 구분 표시 */
-.slider input[type=radio]:nth-child(1):checked~.bullets>label:nth-child(1){
-  background-color: #fff;  
-}
-.slider input[type=radio]:nth-child(2):checked~.bullets>label:nth-child(2){
-  background-color: #fff;
-}
-.slider input[type=radio]:nth-child(3):checked~.bullets>label:nth-child(3){
-  background-color: #fff;
-}
-.slider input[type=radio]:nth-child(4):checked~.bullets>label:nth-child(4){
-  background-color: #fff;
-}
-.slider input[type=radio]:nth-child(1):checked~ul.imgs>li:nth-child(1){
-  left: 0;
-  transition: 0.5s;
-  z-index:1;
-}
-.slider input[type=radio]:nth-child(2):checked~ul.imgs>li:nth-child(2){
-  left: 0;
-  transition: 0.5s;
-  z-index:1;
-}
-.slider input[type=radio]:nth-child(3):checked~ul.imgs>li:nth-child(3){
-  left: 0;
-  transition: 0.5s;
-  z-index:1;
-}
-.slider input[type=radio]:nth-child(4):checked~ul.imgs>li:nth-child(4){
-  left: 0;
-  transition: 0.5s;
-  z-index:1;
-}
-
-/*slide jumbo end*/
 
 
 
@@ -379,7 +319,6 @@ ul.imgs li{
   height:500px;
   overflow:hidden;
 }
-
 .Jumbo-Slide-img{
   margin-top: 60px;
   padding:0px;
@@ -387,7 +326,20 @@ ul.imgs li{
   height:100%;
   object-fit:cover;
 }
-
+.carousel-caption{
+  font-weight: bold;
+}
+.carousel-caption h3{
+  -webkit-text-stroke: 1px white;
+  text-shadow: 4px 4px 2px gray;
+}
+.carousel-caption p{
+  text-shadow: 4px 2px 2px gray;
+}
+.carousel-caption a{
+  text-decoration: none;
+  color: white;
+}
 
 
 /* Detail - Tab */
